--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 
         <title>Zanshin // Thoughts on information security, entrepreneurship and more.</title>
 
+    <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/pure/0.3.0/pure-min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css">
@@ -24,18 +41,18 @@
                 <div class="cover-body">
                     <header class="header">
                         <hgroup>
-                            <img class="avatar" src="/images/head_cat.png">
+                            <img class="avatar" src="/images/zanshin.jpg">
                             <h1 class="brand-main"><a href="http://asieira.github.io">Zanshin</a></h1>
                             <p class="tagline">Thoughts on information security, entrepreneurship and more.</p>
                                 <p class="social">
                                     <a href="https://br.linkedin.com/in/sieira" target="_blank">
-                                        <i class="fa fa-linkedin-square fa-3x"></i>
+                                        <i class="fa fa-linkedin-square fa-2x"></i>
                                     </a>
                                     <a href="https://twitter.com/AlexandreSieira" target="_blank">
-                                        <i class="fa fa-twitter-square fa-3x"></i>
+                                        <i class="fa fa-twitter-square fa-2x"></i>
                                     </a>
                                     <a href="https://github.com/asieira/" target="_blank">
-                                        <i class="fa fa-github-square fa-3x"></i>
+                                        <i class="fa fa-github-square fa-2x"></i>
                                     </a>
                                 </p>
                         </hgroup>
