--- a/archives.html
+++ b/archives.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Zanshin, Thoughts on information security, entrepreneurship and more.">
+    <meta name="description" content="InfoSec Zanshin, Thoughts on information security, entrepreneurship and more.">
 
-        <link rel="alternate"  href="http://asieira.github.io/feeds/all.atom.xml" type="application/atom+xml" title="Zanshin Full Atom Feed"/>
+        <link rel="alternate"  href="http://asieira.github.io/feeds/all.atom.xml" type="application/atom+xml" title="InfoSec Zanshin Full Atom Feed"/>
 
-        <title>all posts // Zanshin // Thoughts on information security, entrepreneurship and more.</title>
+        <title>all posts // InfoSec Zanshin // Thoughts on information security, entrepreneurship and more.</title>
 
     <link rel="apple-touch-icon" sizes="57x57" href="/images/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/apple-icon-60x60.png">
@@ -42,7 +42,7 @@
                     <header class="header">
                         <hgroup>
                             <img class="avatar" src="/images/zanshin.jpg">
-                            <h1 class="brand-main"><a href="http://asieira.github.io">Zanshin</a></h1>
+                            <h1 class="brand-main"><a href="http://asieira.github.io">InfoSec Zanshin</a></h1>
                             <p class="tagline">Thoughts on information security, entrepreneurship and more.</p>
                                 <p class="social">
                                     <a href="https://br.linkedin.com/in/sieira" target="_blank">
