Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -67,7 +67,7 @@
             </ul>
 <footer class="footer">
     <p>&copy; Alexandre Sieira &ndash;
-        Built with <a href="https://github.com/PurePelicanTheme/pure-single">Pure Theme</a>
+        Built with a modified version of <a href="https://github.com/PurePelicanTheme/pure-single">Pure Theme</a>
         for <a href="http://blog.getpelican.com/">Pelican</a>
     </p>
 </footer>        </div>
