--- a/archives.html
+++ b/archives.html
@@ -65,7 +65,7 @@
             <h1 class="content-subhead">All posts</h1>
 <footer class="footer">
     <p>&copy; Alexandre Sieira &ndash;
-        Built with <a href="https://github.com/PurePelicanTheme/pure-single">Pure Theme</a>
+        Built with a modified version of <a href="https://github.com/PurePelicanTheme/pure-single">Pure Theme</a>
         for <a href="http://blog.getpelican.com/">Pelican</a>
     </p>
 </footer>        </div>
