Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -67,6 +67,7 @@
       <h1 class="content-subhead">Authors</h1>
       <ul>
 
+          <li><a href="http://asieira.github.io/author/alexandre-sieira.html">Alexandre Sieira</a></li>
 <footer class="footer">
     <p>&copy; Alexandre Sieira &ndash;
         Built with a modified version of <a href="https://github.com/PurePelicanTheme/pure-single">Pure Theme</a>
