--- a/categories.html
+++ b/categories.html
@@ -64,6 +64,7 @@
         <div class="content">
             <h1 class="content-subhead">All Categories</h1>
             <ul>
+                    <li><a href="http://asieira.github.io/category/tools.html">Tools</a></li>
             </ul>
 <footer class="footer">
     <p>&copy; Alexandre Sieira &ndash;
