Generate Pelican site

--- a/test-data-to-develop-splunk-content.html
+++ b/test-data-to-develop-splunk-content.html
@@ -128,8 +128,8 @@ the <code>Enable ./bin/eventgen.py</code> checkbox to enable/disable event gener
 </li>
 </ul>
 <p>One this is done, eventgen will inspect all other installed apps it can access (hence the permissions step above) and
-generate fake events for them according to their configurations, usually directly to the <code>main</code> index. So easy way to
-choose which apps to generate events from at this time.</p>
+generate fake events for them according to their configurations, usually directly to the <code>main</code> index. No easy way to
+choose which apps to generate events from at this time, unfortunately.</p>
             <a href="#" class="go-top">Go Top</a>
     <div class="comments">
         <div id="disqus_thread"></div>
