--- a/test-data-to-develop-splunk-content.html
+++ b/test-data-to-develop-splunk-content.html
@@ -52,6 +52,9 @@
                             <h1 class="brand-main"><a href="http://asieira.github.io">InfoSec Zanshin</a></h1>
                             <p class="tagline">Thoughts on information security, entrepreneurship and more.</p>
                                 <p class="social">
+                                    <a href="feeds/all.atom.xml" target="_blank">
+                                        <i class="fa fa-rss-square fa-2x"></i>
+                                    </a>
                                     <a href="https://br.linkedin.com/in/sieira" target="_blank">
                                         <i class="fa fa-linkedin-square fa-2x"></i>
                                     </a>
