--- a/test-data-to-develop-splunk-content.html
+++ b/test-data-to-develop-splunk-content.html
@@ -85,22 +85,23 @@ because it has embraced the development paradigm, and organizes standard and use
 lets you write code in proper languages like Python or Java to process the data in ways that go beyond their own query 
 language.</p>
 <p>Which brings me to how it is that you can develop and test an app for security devices and environments you don't 
-personally have access to. Actual sample log data is not easy to come by, and even when you it some Splunk apps expect
-the log data to come from syslog or other input methods, and reading from a file on disk is not always trivial. </p>
+personally have access to. Actual sample log data is not easy to come by. And even if you find it some Splunk apps 
+expect the log data to be ingested in particular ways (e.g. syslog), and replaying them from a file on disk is not 
+always trivial. </p>
 <p>This is a concern both if you are writing a new app that will be used by others, or if you want to ensure that your
 internal organization's apps are able to correctly handle log entries that are infrequent or that you might not
 have encountered before. For example, the 
 <a href="https://docs.splunk.com/Documentation/CIM/latest/User/IntrusionDetection">Network Intrusion CIM model</a>
-does not specifiy a finite list of possible values for the <code>action</code> field. And until you see some test examples you
-wouldn't have imagined that the Check Point OPSEC TA field extractions will have the service name instead of the port 
-number in the <code>dest_port</code> field of the 
+does not specify a finite list of possible values for the <code>action</code> field. And until you see some test examples you
+won't know that the Check Point OPSEC TA field extractions will have the service name instead of the port number in the 
+<code>dest_port</code> field of the 
 <a href="https://docs.splunk.com/Documentation/CIM/latest/User/NetworkTraffic">Network Traffic CIM model</a>. So you'll need to 
-get a representative set of events and find what out values your product's TAs actually generate if you want to ensure
-your app will adequately survive its first encounter with with real events out there in the wilderness.</p>
-<p>Looking into this for the <a href="https://splunkbase.splunk.com/app/2777/">Niddel app</a> I ran into a very useful tool called 
-<a href="https://github.com/splunk/eventgen">eventgen</a>. Basically what I have found is that most Splunk-developed apps, and
-many develop by third parties, are shipped with configuration that allow you to easily generate sample log data that you
-can then use to test your content. </p>
+get a representative set of events and find what out values the TAs actually generate if you want to ensure your content 
+will adequately survive its first encounter with with real events out there in the wilderness.</p>
+<p>Looking into this for the <a href="https://splunkbase.splunk.com/app/2777/">Niddel app</a> I stumbled upon a very useful tool 
+called <a href="https://github.com/splunk/eventgen">eventgen</a>. Basically what I have found is that most Splunk-developed apps,
+and many developed by third parties, are shipped with configurations that allow you to easily generate sample log data 
+that you can then use to test your content. </p>
 <p>The <a href="https://github.com/splunk/eventgen/blob/develop/README/Tutorial.md">eventgen tutorial</a> is very thorough and the
 tool is very well documented. However the documentation is almost exclusively focused on app developers which want to
 support event generation in their apps. Very little is said about how to simply use the functionality the app developers
@@ -108,7 +109,7 @@ already built-in. So let me try to help fill in the gaps here with the TL;DR ver
 development-only Splunk instances:</p>
 <ul>
 <li>
-<p>First, confirm if the particular app or TA you are interested on has that configuration: go to its directory
+<p>First, confirm if the particular app or TA you are interested in has that configuration: go to its directory
 under <code>$SPLUNK_HOME/etc/apps</code> (or download it from <a href="https://splunkbase.splunk.com">SplunkBase</a> and check within the 
 archive) for a <code>samples</code> directory and a <code>default/eventgen.conf</code> file. If it's there, you're in luck.</p>
 </li>
