Generate Pelican site

--- a/test-data-to-develop-splunk-content.html
+++ b/test-data-to-develop-splunk-content.html
@@ -85,7 +85,7 @@ because it has embraced the development paradigm, and organizes standard and use
 lets you write code in proper languages like Python or Java to process the data in ways that go beyond their own query 
 language.</p>
 <p>Which brings me to how it is that you can develop and test an app for security devices and environments you don't 
-personally have access to. Actual sample log data is not easy to come by. And even if you find it some Splunk apps 
+personally have access to. Actual sample log data is not easy to come by. And even if you do find it some Splunk apps 
 expect the log data to be ingested in particular ways (e.g. syslog), and replaying them from a file on disk is not 
 always trivial. </p>
 <p>This is a concern both if you are writing a new app that will be used by others, or if you want to ensure that your
