--- a/test-data-to-develop-splunk-content.html
+++ b/test-data-to-develop-splunk-content.html
@@ -127,8 +127,8 @@ for the app you want events from. Make sure the <code>Sharing for config file-on
 </li>
 <li>
 <p>The new eventgen app does not have a setup page when you go to it under <code>Apps</code>, just statistics on the generated events.
-So the only way I found to enable and disable it is to go to <code>Apps</code> -&gt; <code>Manage Apps</code>and click on <code>Set Up</code> on the row of the eventgen app. Mark and unmark
-the <code>Enable ./bin/eventgen.py</code> checkbox to enable/disable event generation.</p>
+So the only way I found to enable and disable it is to go to <code>Apps</code> -&gt; <code>Manage Apps</code> and click on <code>Set Up</code> on the row of
+the eventgen app. Mark and unmark the <code>Enable ./bin/eventgen.py</code> checkbox to enable/disable event generation.</p>
 </li>
 </ul>
 <p>One this is done, eventgen will inspect all other installed apps it can access (hence the permissions step above) and
