Generate Pelican site

--- a/test-data-to-develop-splunk-content.html
+++ b/test-data-to-develop-splunk-content.html
@@ -135,7 +135,7 @@ So the only way I found to enable and disable it is to go to <code>Apps</code> -
 the eventgen app. Mark and unmark the <code>Enable ./bin/eventgen.py</code> checkbox to enable/disable event generation.</p>
 </li>
 </ul>
-<p>One this is done, eventgen will inspect all other installed apps it can access (hence the permissions step above) and
+<p>Once this is done, eventgen will inspect all other installed apps it can access (hence the permissions step above) and
 generate fake events for them according to their configurations, usually directly to the <code>main</code> index. No easy way to
 choose which apps to generate events from at this time, unfortunately.</p>
             <a href="#" class="go-top">Go Top</a>
