Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -70,6 +70,7 @@
 
           <li><a href="http://asieira.github.io/tag/siem.html">siem</a> (1) </li>
           <li><a href="http://asieira.github.io/tag/splunk.html">splunk</a> (1) </li>
+          <li><a href="http://asieira.github.io/tag/threat-intelligence.html">threat intelligence</a> (1) </li>
 <footer class="footer">
     <p>&copy; Alexandre Sieira &ndash;
         Built with a modified version of <a href="https://github.com/PurePelicanTheme/pure-single">Pure Theme</a>
