--- a/categories.html
+++ b/categories.html
@@ -68,6 +68,7 @@
         <div class="content">
             <h1 class="content-subhead">All Categories</h1>
             <ul>
+                    <li><a href="https://asieira.github.io/category/opinions.html">Opinions</a></li>
                     <li><a href="https://asieira.github.io/category/tools.html">Tools</a></li>
             </ul>
 <footer class="footer">
