Generate Pelican site

--- a/threat-intelligence-indicators-are-not-signatures.html
+++ b/threat-intelligence-indicators-are-not-signatures.html
@@ -122,7 +122,7 @@ but it's even more striking because the feeds are not even making claim 2 above,
 form of the fallacy.</p>
 <p>To give you an example, you could find a perfectly valid indicator saying a piece of malware uses something like
 a public API from Google, Dropbox or anyone else just to verify whether it can connect to the Internet. Or it could
-one some publicly available service to identify which public IP address it is reaching the Internet from, and its 
+use some publicly available service to identify which public IP address it is reaching the Internet from, and its 
 geolocation, in particular in the case of targeted attacks.</p>
 <p>This sort of indicator can still be really useful if you are doing DFIR or hunting, as it allows you to narrow down 
 compromised machines on the network, or let you know which forensic data to investigate first. But it should be obvious 
