Generate Pelican site

--- a/threat-intelligence-indicators-are-not-signatures.html
+++ b/threat-intelligence-indicators-are-not-signatures.html
@@ -169,10 +169,9 @@ purposes. Firstly, we know that miscreants can and will
 <a href="https://en.wikipedia.org/wiki/Fast_flux">switch the IP addresses a domain resolves to often</a>, and the IPs you
 receive will most likely be outdated by the time you get to use them. Second, it's not uncommon for malicious domains
 to be using a service like <a href="https://www.cloudflare.com/">CloudFlare</a>, <a href="https://www.incapsula.com/">Incapsula</a> or a 
-some shared hosting service. So if you resolve the domain, you'll get an IP address that's shared with possibly hundreds
-of benign websites. Or it could be temporarily parked at a benign IP address such as 8.8.8.8. Again, knowing that a 
-domain is malicious does not necessarily mean that all of the IPs it resolves to are mostly or completely malicious as
-well.</p>
+shared hosting service. So if you resolve the domain, you'll get an IP address that's shared with possibly hundreds of
+benign websites. Or it could be temporarily parked at a benign IP address such as 8.8.8.8. Again, knowing that a domain 
+is malicious does not necessarily mean that all of the IPs it resolves to are mostly or completely malicious as well.</p>
 <p>Feed providers, take note: having this extra information would be more helpful if it was possible to distinguish the 
 <em>principled</em> indicators from the <em>derived</em> ones. But alas, this information is often not present in the 
 computer-readable indicators.</p>
