Generate Pelican site

--- a/threat-intelligence-indicators-are-not-signatures.html
+++ b/threat-intelligence-indicators-are-not-signatures.html
@@ -90,8 +90,8 @@ with <a href="https://www.twitter.com/bhaskar_vk">Bhaskar Karambelkar</a>, which
 <a href="https://threatconnect.com/">ThreatConnect</a>. This was related to the Black Hat 2015 session called 
 <a href="https://youtu.be/6JMEKnes-w0?list=PLnKLzDQgx6bPRfNuf3sA2Sy2JDjbcg0P5">Data-Driven Threat Intelligence: Metrics On Indicator Dissemination And Sharing</a>,
 which I had the pleasure to co-present with my good friend <a href="https://twitter.com/alexcpsec">Alex Pinto</a>.</p>
-<p>At the end of the webcast, someone asked me a question about I point I had made about threat intelligence indicators
-having multiple uses, but that they are not signatures. One of the audience members was a bit baffled by this, and I
+<p>At the end of the webcast, someone asked me a question about a comment I had made on how threat intelligence indicators
+have multiple uses, but should not be used as signatures. One of the audience members was a bit baffled by this, and I 
 am sure he is not alone. </p>
 <p>So let's focus on automating the use of simple network indicators (IP addresses, domain names and URLs, mostly) that 
 most companies will obtain from public or private threat intelligence feeds. Let me show why <em>using them directly as 
