--- a/drafts/test-data-to-develop-splunk-content.html
+++ b/drafts/test-data-to-develop-splunk-content.html
@@ -8,12 +8,10 @@
           * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
           * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
          */
-         /**
          var disqus_config = function () {
-           this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
-           this.page.identifier = PAGE_IDENTIFIER"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+           this.page.url = "drafts/test-data-to-develop-splunk-content.html"; // Replace PAGE_URL with your page's canonical URL variable
+           this.page.identifier = "Test Data to Develop Splunk Content"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
          };
-         */
          (function() { // DON'T EDIT BELOW THIS LINE
            var d = document, s = d.createElement('script');
 
