Generate Pelican site

--- a/test-data-to-develop-splunk-content.html
+++ b/test-data-to-develop-splunk-content.html
@@ -9,7 +9,7 @@
           * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
          */
          var disqus_config = function () {
-           this.page.url = "test-data-to-develop-splunk-content.html"; // Replace PAGE_URL with your page's canonical URL variable
+           this.page.url = "https://asieira.github.io/test-data-to-develop-splunk-content.html"; // Replace PAGE_URL with your page's canonical URL variable
            this.page.identifier = "Test Data to Develop Splunk Content"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
          };
          (function() { // DON'T EDIT BELOW THIS LINE
