--- a/threat-intelligence-indicators-are-not-signatures.html
+++ b/threat-intelligence-indicators-are-not-signatures.html
@@ -9,7 +9,7 @@
           * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
          */
          var disqus_config = function () {
-           this.page.url = "threat-intelligence-indicators-are-not-signatures.html"; // Replace PAGE_URL with your page's canonical URL variable
+           this.page.url = "https://asieira.github.io/threat-intelligence-indicators-are-not-signatures.html"; // Replace PAGE_URL with your page's canonical URL variable
            this.page.identifier = "Threat Intelligence Indicators are not Signatures"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
          };
          (function() { // DON'T EDIT BELOW THIS LINE
