Generate Pelican site

--- a/using-openvpn-access-server-to-access-aws-vpcs.html
+++ b/using-openvpn-access-server-to-access-aws-vpcs.html
@@ -52,7 +52,7 @@ chmod a+x /root/certbot-route53.sh
                 <span class="s2">&quot;route53:ListResourceRecordSets&quot;</span>
             <span class="p">],</span>
             <span class="nt">&quot;Resource&quot;</span><span class="p">:</span> <span class="p">[</span>
-                <span class="s2">&quot;arn:aws:route53:::hostedzone/Z1QB64WU43T6IU&quot;</span>
+                <span class="s2">&quot;arn:aws:route53:::hostedzone/&lt;your hosted zone ID&gt;&quot;</span>
             <span class="p">]</span>
         <span class="p">},</span>
         <span class="p">{</span>
