Generate Pelican site

--- a/drafts/siems-are-development-platforms-not-ready-to-use-products.html
+++ b/drafts/siems-are-development-platforms-not-ready-to-use-products.html
@@ -19,7 +19,7 @@
            s.setAttribute('data-timestamp', +new Date());
            (d.head || d.body).appendChild(s);
          })();
-       </script><noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript></div></div></div><footer class="footer"><p>&copy; Alexandre Sieira &ndash; Built with a modified version of <a href="https://github.com/PurePelicanTheme/pure-single">Pure Theme</a> for <a href="http://blog.getpelican.com/">Pelican</a></p></footer></div></div><script>
+       </script><noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript></div></div></div><footer class="footer"><p>&copy; Alexandre Sieira &ndash; Built with a <a href="https://github.com/asieira/pure-single">modified version of Pure Theme</a> for <a href="http://blog.getpelican.com/">Pelican</a></p></footer></div></div><script>
         var $top = $('.go-top');
 
         // Show or hide the sticky footer button
