Generate Pelican site

--- a/using-openvpn-access-server-to-access-aws-vpcs.html
+++ b/using-openvpn-access-server-to-access-aws-vpcs.html
@@ -125,4 +125,4 @@ chmod a+x /root/certbot-route53.sh
   ga('create', 'UA-73747222-1', 'auto');
   ga('send', 'pageview');
 
-</script></body><script src="https://www.infoseczanshin.com/js/redirect.js"></script></html>
+</script></body><script src="https://www.infoseczanshin.com/js/redirect.js"></script><script src="js/redirect.js"></script></html>
