Generate Pelican site

--- a/introducing-snakecharmr.html
+++ b/introducing-snakecharmr.html
@@ -96,4 +96,4 @@
   ga('create', 'UA-73747222-1', 'auto');
   ga('send', 'pageview');
 
-</script></body><script src="https://www.infoseczanshin.com/js/redirect.js"></script><script src="js/redirect.js"></script></html>
+</script></body><script src="js/redirect.js"></script></html>
