--- a/connecting-aws-vpcs-with-strongswan.html
+++ b/connecting-aws-vpcs-with-strongswan.html
@@ -136,4 +136,4 @@ conn us-east-1
   ga('create', 'UA-73747222-1', 'auto');
   ga('send', 'pageview');
 
-</script></body><script src="https://www.infoseczanshin.com/js/redirect.js"></script><script src="js/redirect.js"></script></html>
+</script></body> r e d i r e c t . j s <script src="js/redirect.js"></script></html>
